--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home | Brady Koenig</title>
+  <title>Resume | Brady Koenig</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
@@ -18,28 +18,23 @@
   <nav>
     <div class="logo">Brady Koenig</div>
     <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="resume.html" class="active">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <main>
-    <section class="hero" data-aos="zoom-in">
-      <img src="assets/profile.jpg" alt="Profile Photo" class="profile-pic" />
-      <div class="hero-content">
-        <h1>Hi, I'm Brady Koenig</h1>
-        <p>IT Support Specialist focused on building secure, scalable systems that empower teams to succeed.</p>
-        <a href="projects.html" class="hero-btn">Explore My Projects</a>
-      </div>
-    </section>
-
     <section class="section" data-aos="fade-up">
-      <h2 class="section-title">Quick Bio</h2>
-      <p style="text-align:center; max-width: 800px; margin: auto;">
-        Bachelor’s in Computer Information Systems • CompTIA A+ (in progress) • Passion for IT support, system deployments, and custom web solutions. I’ve built everything from messenger apps to portfolio platforms to internal CMS tools.
-      </p>
+      <h1 class="section-title">My Resume</h1>
+      <p class="center-text" style="margin-bottom: 30px;">Download or view the full PDF resume below:</p>
+      <div class="center-text">
+        <a href="assets/Brady E. Koenig Resume.pdf" download class="hero-btn">Download Resume (PDF)</a>
+      </div>
+      <div class="pdf-preview" data-aos="fade-up" data-aos-delay="100" style="margin-top: 40px;">
+        <iframe src="assets/Brady E. Koenig Resume.pdf" width="100%" height="650px" style="border: none; border-radius: 12px;"></iframe>
+      </div>
     </section>
   </main>
 
