--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <section class="section" data-aos="fade-up">
       <h2 class="section-title">Quick Bio</h2>
       <p style="text-align:center; max-width: 800px; margin: auto;">
-        Bachelor’s in Computer Information Systems • CompTIA A+ (in progress) • Passion for IT support, system deployments, and custom web solutions. I’ve built everything from messenger apps to portfolio platforms to internal CMS tools.
-      </p>
+        Bachelor’s in Computer Information Systems • CompTIA A+ (in progress) • Strong background in IT support, remote workstation setup, VPNs, and system imaging. Comfortable with Microsoft 365, help desk tools, and asset management. I focus on building reliable tech environments and making support as smooth and efficient as possible.
     </section>
   </main>
 
