--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="logo">Brady Koenig</div>
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -31,14 +32,14 @@
       <div class="hero-content">
         <h1>Hi, I'm Brady Koenig</h1>
         <p>IT Support Specialist focused on building secure, scalable systems that empower teams to succeed.</p>
-        <a href="projects.html" class="hero-btn">Explore My Projects</a>
+        <a href="about.html" class="hero-btn">Who Am I?</a>
       </div>
     </section>
 
     <section class="section" data-aos="fade-up">
       <h2 class="section-title">Quick Bio</h2>
       <p style="text-align:center; max-width: 800px; margin: auto;">
-        Bachelor’s in Computer Information Systems • CompTIA A+ (in progress) • Strong background in IT support, remote workstation setup, VPNs, and system imaging. Comfortable with Microsoft 365, help desk tools, and asset management. I focus on building reliable tech environments and making support as smooth and efficient as possible.
+        Bachelor's in Computer Information Systems • CompTIA A+ (in progress) • Strong background in IT support, remote workstation setup, VPNs, and system imaging. Comfortable with Microsoft 365, help desk tools, and asset management. I focus on building reliable tech environments and making support as smooth and efficient as possible.
     </section>
   </main>
 
