--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
     <div class="logo">Brady Koenig</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="resume.html" class="active">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
