Added project.html redirect in about.html

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     <section class="hero" data-aos="zoom-in">
       <h1>Get to Know Me</h1>
       <p>This page is all about who I am beyond the resume.</p>
+       <a href="projects.html" class="hero-btn">View My Projects</a>
     </section>
 
     <section class="section" data-aos="fade-up">
