--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,14 @@
 <body>
   <nav>
     <div class="logo">Brady Koenig</div>
-    <ul class="nav-links">
+    <div class="hamburger" id="hamburger">&#9776;</div>
+
+    <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
+      <li><a href="contact.html"class="active">Contact</a></li>
     </ul>
   </nav>
 
@@ -52,5 +54,15 @@
   </main>
 
   <footer>© 2025 Brady Koenig • All Rights Reserved</footer>
+
+  <script>
+    const hamburger = document.getElementById('hamburger');
+    const navLinks = document.getElementById('navLinks');
+
+    hamburger.addEventListener('click', () => {
+      navLinks.classList.toggle('show');
+    });
+  </script>
+
 </body>
 </html>
