Removed hamburger - PC focused

--- a/about.html
+++ b/about.html
@@ -15,11 +15,9 @@
 <body>
   <nav>
     <div class="logo">Brady Koenig</div>
-    <div class="hamburger" id="hamburger">&#9776;</div>
-
-    <ul class="nav-links" id="navLinks">
+    <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html"class="active">About</a></li>
+      <li><a href="about.html" class="active">About</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -102,15 +100,5 @@
   </main>
 
   <footer>© 2025 Brady Koenig • All Rights Reserved</footer>
-
-  <script>
-    const hamburger = document.getElementById('hamburger');
-    const navLinks = document.getElementById('navLinks');
-
-    hamburger.addEventListener('click', () => {
-      navLinks.classList.toggle('show');
-    });
-  </script>
-
 </body>
 </html>
